<resources>
    <string name="app_name">ChatCool</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="auth_failed">Auth Failed</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="auth_name_failed">User set name failed</string>
    <string name="chat_send_message">Send</string>
    <string name="change_name">Change Name</string>
</resources>
